@@ -12,6 +12,7 @@ PHP                                                                        NEWS
 - DOM:
   . Fixed bug #77569: (Write Access Violation in DomImplementation). (Nikita,
     cmb)
+  . Fixed bug #79271 (DOMDocumentType::$childNodes is NULL). (cmb)
 
 - PCRE:
   . Fixed bug #79188 (Memory corruption in preg_replace/preg_replace_callback
